--- a/app/views/integrations/slack.html.erb
+++ b/app/views/integrations/slack.html.erb
@@ -33,7 +33,7 @@
           <path fill="#2EB67D" d="M10.11 12.639c.926 0 1.682.756 1.682 1.681S11.036 16 10.11 16s-1.681-.756-1.681-1.68v-1.682zm0-.847c-.924 0-1.68-.755-1.68-1.68s.756-1.681 1.68-1.681h4.21c.924 0 1.68.756 1.68 1.68 0 .926-.756 1.681-1.68 1.681z"/>
           <path fill="#E01E5A" d="M3.362 10.11c0 .926-.756 1.681-1.681 1.681S0 11.036 0 10.111.756 8.43 1.68 8.43h1.682zm.846 0c0-.924.756-1.68 1.681-1.68s1.681.756 1.681 1.68v4.21c0 .924-.756 1.68-1.68 1.68a1.685 1.685 0 0 1-1.682-1.68z"/>
         </svg>
-      </div>
+      </div></br>
       
       <div class="inline-flex items-center px-3 py-1 rounded-full bg-violet-500/10 border border-violet-500/20 mb-6">
         <span class="text-violet-400 text-sm font-medium">INTEGRATION</span>
