--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,6 +37,13 @@
     <!-- Billing/Trial Warning Banner -->
     <%= render "shared/billing_banner" %>
 
+    <!-- Email Confirmation Banner -->
+    <% if user_signed_in? %>
+      <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 mt-4">
+        <%= render "shared/email_confirmation_banner" %>
+      </div>
+    <% end %>
+
     <!-- Quota Warning Banners -->
     <% if user_signed_in? %>
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 mt-4">
